Added tests for some of the DockerUtils methods